--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -18,6 +18,6 @@
     </ul>
     <a *ngIf="!isLoggedIn()" class="btn btn-light" routerLinkActive="active" routerLink="/login">Login</a>
     <a *ngIf="!isLoggedIn()" class="btn btn-light" routerLinkActive="active" routerLink="/signup">Sign Up</a>
-    <a *ngIf="isLoggedIn()" (click)="logOut()" routerLink="/" class="btn btn-secondary">Log out</a>
+    <a *ngIf="isLoggedIn()" class="btn btn-light"  (click)="onLogout()">Log out</a>
   </div>
 </nav>
